# mhd_dg

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  compose.yaml  compose.yml  main.cpp  todo
